--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+python-etcd (0.4.2-3) UNRELEASED; urgency=medium
+
+  * Fixed VCS URL (https)
+
+ -- Ondřej Nový <novy@ondrej.org>  Tue, 29 Mar 2016 22:02:38 +0200
+
 python-etcd (0.4.2-2) unstable; urgency=medium
 
   * Team upload.
