--- a/debian/changelog
+++ b/debian/changelog
@@ -1,12 +1,13 @@
-python-etcd (0.4.3-3) UNRELEASED; urgency=medium
+python-etcd (0.4.3-2) UNRELEASED; urgency=medium
 
   [ Ondřej Nový ]
   * Fixed VCS URL (https)
 
   [ Jelmer Vernooĳ ]
   * Merge in 0.4.2-2 changes.
+  * Unicodify my surname.
 
- -- Ondřej Nový <novy@ondrej.org>  Tue, 29 Mar 2016 22:02:38 +0200
+ -- Jelmer Vernooĳ <jelmer@debian.org>  Sun, 03 Jul 2016 20:58:13 +0000
 
 python-etcd (0.4.3-1) unstable; urgency=medium
 
