--- a/debian/changelog
+++ b/debian/changelog
@@ -6,6 +6,7 @@ python-etcd (0.4.3-2) UNRELEASED; urgency=medium
   [ Jelmer Vernooĳ ]
   * Merge in 0.4.2-2 changes.
   * Unicodify my surname.
+  * Bump standards version to 3.9.8 (no changes).
 
  -- Jelmer Vernooĳ <jelmer@debian.org>  Sun, 03 Jul 2016 20:58:13 +0000
 
