--- a/debian/changelog
+++ b/debian/changelog
@@ -1,4 +1,4 @@
-python-etcd (0.4.3-2) UNRELEASED; urgency=medium
+python-etcd (0.4.3-2) unstable; urgency=medium
 
   [ Ondřej Nový ]
   * Fixed VCS URL (https)
